k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dialogflow-sendgrid
spec:
  selector:
    app: dialogflow-sendgrid
  ports:
  - name: http
    targetPort: 5000
    port: 80
