k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dialogflow-sendgrid
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: ushacom
spec:
  rules:
  - host: email.ushaflow.io
    http:
      paths:
      - path: /
        backend:
          serviceName: dialogflow-sendgrid
          servicePort: http
  tls:
  - hosts:
    - email.ushaflow.io
    secretName: dialogflow-sendgrid-cert
